--- a/tindog/package.json
+++ b/tindog/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "babel-eslint": "^9.0.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-scripts": "2.0.0-next.a671462c"
@@ -24,5 +25,9 @@
       "not op_mini all",
       "ie 11"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^5.6.0",
+    "eslint-plugin-react": "^7.11.1"
   }
 }
