--- a/tindog/package.json
+++ b/tindog/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "babel-eslint": "^9.0.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-scripts": "2.0.0-next.a671462c"
@@ -27,7 +26,8 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^5.6.0",
+    "babel-eslint": "^9.0.0",
+    "eslint": "4.19.1",
     "eslint-plugin-react": "^7.11.1"
   }
 }
