--- a/tindog/package.json
+++ b/tindog/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "dependencies": {
     "proptypes": "^1.1.0",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "2.0.0-next.a671462c"
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "^3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -28,8 +28,5 @@
     ]
   },
   "devDependencies": {
-    "babel-eslint": "^9.0.0",
-    "eslint": "4.19.1",
-    "eslint-plugin-react": "^7.11.1"
   }
 }
